<resources>
    <string name="app_name">Plus Thinker</string>
    <string name="add_new_post">Add New Post</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="find_friends">Find Friends</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email…</string>
    <string name="password">Password…</string>
    <string name="confirm_password">Confirm Password…</string>
    <string name="login">Login</string>
    <string name="have_not_account"><u>Don\'t have account, Need new account?</u></string>
    <string name="login_another_type">or Login With</string>
    <string name="save_data">Save</string>
    <string name="full_name">Full Name</string>
    <string name="country">Country</string>
    <string name="gender">Gender</string>
    <string name="dob">Date of Birth</string>
    <string name="relationship">Relationship</string>
    <string name="update_post">Update Post</string>
    <string name="description">Write something about image here…</string>
    <string name="post_image">Please select post image…</string>
    <string name="write_something">Please write something about your image…</string>
    <string name="post_on_date">has been uploaded a post</string>
    <string name="comment_on_date">has been commented a post</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="server_client_id">406946963185-r9b9sh3vigev1oogt02pr31nuve1dndn.apps.googleusercontent.com</string>
    <string name="server_client_secret">AIzaSyCYFqf-nupcLVlAweEntc84oK8p5BEa6aE</string>
    <string name="facebook_app_id">583849292292207</string>
    <string name="fb_login_protocol_scheme">fb583849292292207</string>
    <string name="google_ads_app_id">ca-app-pub-4896913136356344~9683700201</string>
    <string name="banner_id">ca-app-pub-4896913136356344/3665086764</string>
    <string name="inst_add_id">ca-app-pub-4896913136356344/8964696668</string>
    <string name="edit_post">Edit Post</string>
    <string name="account_settings">Account Settings</string>
    <string name="update_account_settings">Update Account Settings</string>
    <string name="likes">0 Likes</string>
    <string name="comments">0 Comments</string>
    <string name="share">Share</string>
    <string name="post_comments">Comments:</string>
    <string name="title">Title</string>
    <string name="comment_line">Write Comment here</string>
    <string name="forget_password"><u>Forget Password?</u></string>
    <string name="forget_password_link">We will mail you a link after when you provide email and
        click the send button. Please click on that link to reset your password.</string>
    <string name="reset_password">Reset Password</string>
</resources>