<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_post"
        android:title="@string/add_new_post"
        android:icon="@drawable/ic_add_post"/>
    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"/>
    <!--<item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/nav_friends"
        android:title="@string/friends"
        android:icon="@drawable/ic_trust"/>
    <item
        android:id="@+id/nav_find_friends"
        android:title="@string/find_friends"
        android:icon="@drawable/ic_find_friends"/>
    <item
        android:id="@+id/nav_messages"
        android:title="@string/messages"
        android:icon="@drawable/ic_mail"/>-->
    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"/>
    <item
        android:id="@+id/nav_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"/>
</menu>