<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/profile_background">
    <include
        android:id="@+id/profile_page_toolbar"
        layout="@layout/app_bar_layout">
    </include>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/my_profile_layout"
        android:layout_below="@id/profile_page_toolbar"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/my_profile_image"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/profile"
                android:layout_marginVertical="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/my_profile_fullName"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/full_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/my_profile_username"
                android:textColor="#fff"
                android:textSize="18sp"
                android:text="@string/username"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/my_profile_status"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="22sp"
                android:text="@string/write_something"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/my_profile_country"
                android:visibility="gone"
                android:layout_marginTop="50dp"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:text="@string/country"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/my_profile_dob"
                android:visibility="gone"
                android:layout_marginVertical="2dp"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:text="@string/dob"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/my_profile_gender"
                android:visibility="gone"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:text="@string/gender"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/my_profile_relationship"
                android:visibility="gone"
                android:layout_marginVertical="2dp"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:text="@string/relationship"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>