<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/register_layout"
    android:background="@drawable/register"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/register_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginVertical="50dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/profile" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_icon"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:background="@drawable/inputs"
        android:padding="4dp"
        android:layout_marginHorizontal="5dp"
        android:drawableLeft="@drawable/ic_email"
        tools:ignore="Autofill,LabelFor"
        android:drawableStart="@drawable/ic_email" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_email"
        android:ems="10"
        android:layout_marginVertical="30dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/inputs"
        android:padding="4dp"
        android:layout_marginHorizontal="5dp"
        android:drawableLeft="@drawable/ic_password"
        tools:ignore="Autofill,LabelFor"
        android:drawableStart="@drawable/ic_password" />

    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:background="@drawable/inputs"
        android:padding="4dp"
        android:layout_marginHorizontal="5dp"
        android:drawableLeft="@drawable/ic_password"
        tools:ignore="Autofill,LabelFor"
        android:drawableStart="@drawable/ic_password" />

    <Button
        android:id="@+id/register_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_confirm_password"
        android:layout_marginVertical="30dp"
        android:background="@drawable/button"
        android:padding="10dp"
        android:layout_marginHorizontal="5dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>