<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    android:id="@+id/setup_layout"
    tools:context=".SetUpActivity">
    <include
        android:id="@+id/setting_page_toolbar"
        layout="@layout/app_bar_layout">
    </include>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_page_toolbar"
        android:id="@+id/setup_scrollView"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:id="@+id/profile_layout"
                android:layout_margin="20dp"
                tools:ignore="UselessParent">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/setup_profile_image"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_user_profile"/>
            </LinearLayout>
            <EditText
                android:id="@+id/setup_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/username"
                android:background="@drawable/inputs"
                android:padding="4dp"
                android:layout_marginHorizontal="5dp"
                android:drawableLeft="@drawable/ic_alternative_email"
                tools:ignore="Autofill,LabelFor"
                android:drawableStart="@drawable/ic_alternative_email" />
            <EditText
                android:id="@+id/setup_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginVertical="10dp"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:background="@drawable/inputs"
                android:padding="4dp"
                android:layout_marginHorizontal="5dp"
                android:drawableLeft="@drawable/ic_person_name"
                tools:ignore="Autofill,LabelFor"
                android:drawableStart="@drawable/ic_person_name" />
            <EditText
                android:id="@+id/setup_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:ems="10"
                android:hint="@string/country"
                android:inputType="text"
                android:background="@drawable/inputs"
                android:padding="4dp"
                android:layout_marginHorizontal="5dp"
                android:drawableLeft="@drawable/ic_location"
                tools:ignore="Autofill,LabelFor"
                android:drawableStart="@drawable/ic_location" />
            <EditText
                android:id="@+id/setup_gender"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginVertical="10dp"
                android:hint="@string/gender"
                android:inputType="textPersonName"
                android:background="@drawable/inputs"
                android:padding="4dp"
                android:layout_marginHorizontal="5dp"
                android:drawableLeft="@drawable/ic_gender"
                tools:ignore="Autofill,LabelFor"
                android:drawableStart="@drawable/ic_gender" />
            <EditText
                android:id="@+id/setup_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:ems="10"
                android:hint="@string/dob"
                android:inputType="text"
                android:background="@drawable/inputs"
                android:padding="4dp"
                android:layout_marginHorizontal="5dp"
                android:drawableLeft="@drawable/ic_birthday"
                tools:ignore="Autofill,LabelFor"
                android:drawableStart="@drawable/ic_birthday" />
            <EditText
                android:id="@+id/setup_relationship"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:ems="10"
                android:layout_marginVertical="10dp"
                android:hint="@string/relationship"
                android:inputType="textPersonName"
                android:background="@drawable/inputs"
                android:padding="4dp"
                android:layout_marginHorizontal="5dp"
                android:drawableLeft="@drawable/ic_relationship"
                tools:ignore="Autofill,LabelFor"
                android:drawableStart="@drawable/ic_relationship" />
            <Button
                android:id="@+id/setup_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:layout_marginHorizontal="5dp"
                android:text="@string/save_data"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>