<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:padding="5dp"
            android:orientation="horizontal"
            tools:ignore="UselessParent">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/comment_profile_image"
                android:src="@drawable/profile"
                android:scaleType="centerCrop"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/comment_profile_name"
                    android:text="@string/username"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:textAlignment="textStart"
                    android:gravity="start"
                    android:textColor="#000"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comment_on_date"
                        android:layout_marginHorizontal="5dp"
                        android:textColor="@android:color/darker_gray"
                        android:textStyle="bold"
                        android:textSize="13sp"/>
                    <TextView
                        android:id="@+id/comment_post_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="#000"
                        android:textSize="13sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/post_comment"
                        android:padding="3dp"
                        android:layout_marginHorizontal="3dp"
                        android:textSize="14sp"
                        android:text="@string/description"
                        android:textColor="#000"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/comment_post_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:textColor="#000"
                    android:textSize="13sp"
                    android:layout_marginRight="10dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>