<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".ReSetPasswordActivity">
    <include
        android:id="@+id/reset_page_toolbar"
        layout="@layout/app_bar_layout">
    </include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/reset_password_layout"
        android:layout_below="@id/reset_page_toolbar"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/login_icon"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:layout_marginVertical="50dp"
            android:contentDescription="@string/profile"
            app:srcCompat="@drawable/logo_in_login" />
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/reset_password_information"
            android:text="@string/forget_password_link"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/email_layout"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            tools:ignore="UselessParent">
            <EditText
                android:id="@+id/email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:ems="10"
                android:drawableLeft="@drawable/ic_email"
                android:layout_marginHorizontal="5dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:background="@drawable/inputs"
                android:padding="6dp"
                tools:ignore="Autofill,LabelFor"
                android:drawableStart="@drawable/ic_email" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_email_send"
                android:background="@drawable/inputs"
                android:id="@+id/send"
                android:layout_gravity="center"
                tools:ignore="ContentDescription"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>